integration complete de partie hana

--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@angular/router": "^20.3.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
+    "chartjs-chart-box-and-violin-plot": "^4.0.0",
     "firebase": "^11.10.0",
+    "papaparse": "^5.5.3",
     "remixicon": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,7 +44,9 @@
     "@angular/build": "^20.3.10",
     "@angular/cli": "^20.3.10",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
+    "@types/papaparse": "^5.5.1",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
